# MN-2

./: .gitignore  CMakeLists.txt  README.md  integration.cpp  makefile  plot.py
src/: derivation.h  eigenvalues.h  finitedifference.h  integration.h  jacobimatrix.h  linearsystem.h  main.cpp  qrdecomposition.h  qrmethod.h  rungekuttaO4.h  svddecomposition.h
src/matrix/: matrix.cpp  matrix.h
src/processamento_imagem/: filtro_gaussiano.h  filtro_gradiente.h  filtro_laplaciano.h  processamento_imagem.h
src/vec/: vec.cpp  vec.h
